wip? no idea how to depend on a jar in bazel tests

--- a/persistentworkers/src/test/java/persistent/bazel/BUILD
+++ b/persistentworkers/src/test/java/persistent/bazel/BUILD
@@ -3,8 +3,8 @@ java_test(
   size = "small",
   srcs = glob(["**/*.java"]),
   test_class = "persistent.bazel.PersistentWorkerTest",
-  data = [
-    "//persistentworkers/examples/src/main/java:adder-bin_deploy.jar"
+  resources = [
+    "//persistentworkers/src/test/resources:test-files"
   ],
   deps = [
     "//persistentworkers/src/main/java:persistent-workers",
