--- a/persistentworkers/src/test/java/persistent/bazel/BUILD
+++ b/persistentworkers/src/test/java/persistent/bazel/BUILD
@@ -4,12 +4,13 @@ java_test(
   srcs = glob(["**/*.java"]),
   test_class = "persistent.bazel.PersistentWorkerTest",
   resources = [
-    "//persistentworkers/src/test/resources:test-files"
+    "//persistentworkers/examples/src/main/java:adder-bin_deploy.jar"
   ],
   deps = [
     "//persistentworkers/src/main/java:persistent-workers",
     "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
     "@maven//:com_google_truth_truth",
+    "@maven//:commons_io_commons_io",
     "@maven//:org_mockito_mockito_core",
   ],
 )
