--- a/persistentworkers/examples/src/main/java/BUILD
+++ b/persistentworkers/examples/src/main/java/BUILD
@@ -5,6 +5,7 @@ java_library(
   deps = [
     "//persistentworkers/src/main/java:persistent-workers",
     "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
+    "@maven//:com_google_guava_guava",
   ]
 )
 
