PersistentWorkerTest testing a spawned Adder

--- a/persistentworkers/examples/src/test/java/BUILD
+++ b/persistentworkers/examples/src/test/java/BUILD
@@ -7,6 +7,7 @@ java_test(
     "//persistentworkers/examples/src/main/java:adder-lib",
     "//persistentworkers/src/main/java:persistent-workers",
     "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
+    "//persistentworkers/src/test/java/persistent/bazel/testutil:testutil",
     "//third_party/bazel/src/main/protobuf:worker_protocol_java_proto",
     "@maven//:com_google_truth_truth",
     "@maven//:org_mockito_mockito_core",
