--- a/persistentworkers/src/test/java/persistent/bazel/BUILD
+++ b/persistentworkers/src/test/java/persistent/bazel/BUILD
@@ -9,6 +9,8 @@ java_test(
   deps = [
     "//persistentworkers/src/main/java:persistent-workers",
     "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
+    "//persistentworkers/src/test/java/persistent/bazel/testutil:testutil",
+    "//third_party/bazel/src/main/protobuf:worker_protocol_java_proto",
     "@maven//:com_google_truth_truth",
     "@maven//:commons_io_commons_io",
     "@maven//:org_mockito_mockito_core",
