--- a/persistentworkers/examples/src/test/java/BUILD
+++ b/persistentworkers/examples/src/test/java/BUILD
@@ -5,9 +5,9 @@ java_test(
   test_class = "adder.AdderTest",
   deps = [
     "//persistentworkers/examples/src/main/java:adder-lib",
-    "//persistentworkers/src/main/java:persistent-workers",
+    "//persistentworkers/src/main/java/persistent/common:persistent-common",
     "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
-    "//persistentworkers/src/test/java/persistent/bazel/testutil:testutil",
+    "//persistentworkers/src/test/java/persistent/testutil:testutil",
     "//third_party/bazel/src/main/protobuf:worker_protocol_java_proto",
     "@maven//:com_google_truth_truth",
     "@maven//:org_mockito_mockito_core",
