--- a/persistentworkers/src/test/java/persistent/testutil/BUILD
+++ b/persistentworkers/src/test/java/persistent/testutil/BUILD
@@ -1,9 +1,9 @@
 java_library(
   name = "testutil",
-  srcs = glob(["*.java"]),
+  srcs = glob(["**/*.java"]),
   visibility = ["//visibility:public"],
   deps = [
-    "//persistentworkers/src/main/java:persistent-workers",
+    "//persistentworkers/src/main/java/persistent/common:persistent-common",
     "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
     "@maven//:com_google_truth_truth",
     "@maven//:commons_io_commons_io",
