--- a/persistentworkers/src/test/java/persistent/bazel/BUILD
+++ b/persistentworkers/src/test/java/persistent/bazel/BUILD
@@ -1,3 +1,15 @@
+
+COMMON_DEPS = [
+  "//persistentworkers/src/main/java/persistent/common:persistent-common",
+  "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
+  "//persistentworkers/src/test/java/persistent/testutil:testutil",
+  "@bazel_tools//src/main/protobuf:worker_protocol_java_proto",
+  "@maven//:com_google_protobuf_protobuf_java",
+  "@maven//:com_google_truth_truth",
+  "@maven//:commons_io_commons_io",
+  "@maven//:org_mockito_mockito_core",
+]
+
 java_test(
   name = "ProtoWorkerRWTest",
   size = "small",
@@ -5,13 +17,15 @@ java_test(
   resources = [
     "//persistentworkers/examples/src/main/java:adder-bin_deploy.jar"
   ],
-  deps = [
-    "//persistentworkers/src/main/java/persistent/common:persistent-common",
-    "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
-    "//persistentworkers/src/test/java/persistent/testutil:testutil",
-    "//third_party/bazel/src/main/protobuf:worker_protocol_java_proto",
-    "@maven//:com_google_truth_truth",
-    "@maven//:commons_io_commons_io",
-    "@maven//:org_mockito_mockito_core",
+  deps = COMMON_DEPS,
+)
+
+java_test(
+  name = "PersistentWorkerTest",
+  size = "small",
+  srcs = glob(["**/*.java"]),
+  resources = [
+    "//persistentworkers/examples/src/main/java:adder-bin_deploy.jar"
   ],
+  deps = COMMON_DEPS,
 )
