--- a/persistentworkers/src/test/java/persistent/testutil/BUILD
+++ b/persistentworkers/src/test/java/persistent/testutil/BUILD
@@ -5,6 +5,9 @@ java_library(
   deps = [
     "//persistentworkers/src/main/java/persistent/common:persistent-common",
     "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
+    "@bazel_tools//src/main/protobuf:worker_protocol_java_proto",
+    "@maven//:com_google_guava_guava",
+    "@maven//:com_google_protobuf_protobuf_java",
     "@maven//:com_google_truth_truth",
     "@maven//:commons_io_commons_io",
     "@maven//:org_mockito_mockito_core",
