--- a/persistentworkers/src/test/java/persistent/bazel/BUILD
+++ b/persistentworkers/src/test/java/persistent/bazel/BUILD
@@ -29,3 +29,13 @@ java_test(
   ],
   deps = COMMON_DEPS,
 )
+
+java_test(
+  name = "ProtoWorkerCoordinatorTest",
+  size = "small",
+  srcs = glob(["**/*.java"]),
+  resources = [
+    "//persistentworkers/examples/src/main/java:adder-bin_deploy.jar"
+  ],
+  deps = COMMON_DEPS,
+)
