--- a/persistentworkers/src/test/java/persistent/common/BUILD
+++ b/persistentworkers/src/test/java/persistent/common/BUILD
@@ -1,5 +1,5 @@
 java_test(
-  name = "PersistentCoordinatorTest",
+  name = "CoordinatorTest",
   size = "small",
   srcs = glob(["**/*.java"]),
   deps = [
