--- a/persistentworkers/examples/src/test/java/BUILD
+++ b/persistentworkers/examples/src/test/java/BUILD
@@ -8,7 +8,7 @@ java_test(
     "//persistentworkers/src/main/java/persistent/common:persistent-common",
     "//persistentworkers/src/main/java/persistent/bazel:bazel-persistent-workers",
     "//persistentworkers/src/test/java/persistent/testutil:testutil",
-    "//third_party/bazel/src/main/protobuf:worker_protocol_java_proto",
+    "@bazel_tools//src/main/protobuf:worker_protocol_java_proto",
     "@maven//:com_google_truth_truth",
     "@maven//:org_mockito_mockito_core",
   ],
